# content-factory

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  package-lock.json  package.json  start-claude.bat  vite.config.js
.agent/workflows/: create-prd.md  git-ops.md  status.md
.claude/: settings.json
.claude/commands/: autopilot.md  final-check.md  health-check.md  init.md
.claude/hooks/: claude_md_validator.py  inbox_checker.py
.github/workflows/: deploy.yml
archive-analyzer/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  docker-compose.sync.yml  docker-entrypoint.sh  pyproject.toml  requirements-sync.txt
archive-analyzer/.github/workflows/: build-sync-image.yml
archive-analyzer/config/: catalog_patterns.yaml
archive-analyzer/docs/: DATABASE_SCHEMA.md  DATABASE_SCHEMA_V2.md  FIRESTORE_SCHEMA.md  OPENSOURCE_MEDIA_DB_SCHEMA_ANALYSIS.md  VOD_PLATFORM_CONTENT_PATTERNS.md
archive-analyzer/firebase/: .firebaserc  firebase-config.js  firestore.indexes.json  firestore.rules
archive-analyzer/scripts/: migrate_integer_pk.py  migrate_json_normalization.py  migrate_multi_catalog.py  migrate_recommendation_schema.py  migrate_to_firestore.py  migrate_v3_schema.py
archive-analyzer/src/archive_analyzer/: __init__.py  api.py  archive_hands_sync.py  config.py  database.py  file_classifier.py  media_extractor.py  report_generator.py  scanner.py  search.py  sheets_sync.py  smb_connector.py  sync.py  title_generator.py
archive-analyzer/src/archive_analyzer/utils/: __init__.py  path.py
archive-analyzer/tests/: test_firestore_migration.py  test_search.py  test_sheets_sync.py
archive-analyzer/tests/integration/: __init__.py  conftest.py  test_full_workflow.py
docs/: MCP_SOLUTIONS_RESEARCH.md  SHORTS_SOLUTION_RESEARCH.md
docs/guides/: MCP_SETUP_GUIDE.md
inbox/: IMPROVE_PROCESS.md
scripts/: auto-version.ps1  validate-phase-2.5.ps1
src/js/: video-generator.js
src/public/: gallery.html  index.html  job-detail.html  upload.html
tasks/prds/: 0010-prd-photo-factory-final.md  0011-prd-shorts-enhancement.md  0012-prd-distributed-architecture.md
