[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archive-analyzer"
version = "0.2.0"
description = "OTT 솔루션을 위한 미디어 아카이브 분석 도구"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GGP Team"}
]
keywords = ["media", "archive", "ott", "smb", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "smbprotocol>=1.10.0",
    "aiosmb>=0.4.0",
    "rapidfuzz>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
media = [
    "ffmpeg-python>=0.2.0",
    "pymediainfo>=6.0.0",
]
search = [
    "meilisearch>=0.31.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "slowapi>=0.1.9",
]
auth = [
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.6",
]
admin = [
    "sqlite-web>=0.6.0",
]
all = [
    "archive-analyzer[dev,media,search,auth,admin]",
]

[project.scripts]
archive-analyzer = "archive_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/garimto81/archive-analyzer"
Issues = "https://github.com/garimto81/archive-analyzer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: Integration tests (end-to-end workflows)",
    "unit: Unit tests (isolated component tests)",
    "slow: Slow tests (require external resources)",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
